Se realiza migración a API model